--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.344.0",
+    "@heroicons/react": "^2.1.1",
     "nodemailer": "^6.9.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
